finish HTML body

--- a/index.html
+++ b/index.html
@@ -10,13 +10,30 @@
     <title>Jaques Custeau</title>
 </head>
 <body>
-
-
-
-
-
-
+    <div class="page">
+        <div class="header">
+            <img src="/images/logo.png" alt="logo" class="header__logo">
+            <img src="/images/Line.png" alt="linha" class="header__line">
+        </div>
     
+        <div class="profile">
+            <img src="" alt="" class="profile__picture">
+            <p class="profile__name"></p>
+            <button class="profile__edit_btn"></button>
+            <p class="profile__text"></p>
+        </div>
+
+        <button class="add__btn"></button>
+
+        <div class="cards">
+            <div class="card">
+                <img src="" alt="" class="card__image">
+                <p class="card__title"></p>
+                <img src="/images/like.png" alt="" class="card__like">
+            </div>
+        </div>
+
+    </div>
   <script src="/pages/style.css"></script>  
 </body>
 </html>
