feat: add imagesand text to the HTML .profile

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="/pages/index.css">
     <link rel="stylesheet" href="/pages/normalize.css" >
 
-    <title>Jaques Custeau</title>
+    <title>Jacques Custeau</title>
 </head>
 <body>
     <div class="page">
@@ -17,10 +17,10 @@
         </div>
     
         <div class="profile">
-            <img src="" alt="" class="profile__picture">
-            <p class="profile__name"></p>
+            <img src="/images/Custeau.png" alt="foto do perfil" class="profile__picture">
+            <p class="profile__name">Jacques Custeau</p>
             <button class="profile__edit_btn"></button>
-            <p class="profile__text"></p>
+            <p class="profile__text">Explorar</p>
         </div>
 
         <button class="add__btn"></button>
