feat(header): complete header implementation

--- a/index.html
+++ b/index.html
@@ -27,9 +27,39 @@
 
         <div class="cards">
             <div class="card">
+                <img src="/images/vale-Yosemite.png" alt="Vale do Yosemite" class="card__image">
+                <p class="card__title">Vale do vale-Yosemite</p>
+                <img src="/images/like.png" alt="botao de like" class="card__like">
+            </div>
+
+            <div class="card">
                 <img src="" alt="" class="card__image">
                 <p class="card__title"></p>
-                <img src="/images/like.png" alt="" class="card__like">
+                <img src="/images/like.png" alt="otao de like" class="card__like">
+            </div>
+
+            <div class="card">
+                <img src="" alt="" class="card__image">
+                <p class="card__title"></p>
+                <img src="/images/like.png" alt="otao de like" class="card__like">
+            </div>
+
+            <div class="card">
+                <img src="" alt="" class="card__image">
+                <p class="card__title"></p>
+                <img src="/images/like.png" alt="otao de like" class="card__like">
+            </div>
+
+            <div class="card">
+                <img src="" alt="" class="card__image">
+                <p class="card__title"></p>
+                <img src="/images/like.png" alt="otao de like" class="card__like">
+            </div>
+
+            <div class="card">
+                <img src="" alt="" class="card__image">
+                <p class="card__title"></p>
+                <img src="/images/like.png" alt="otao de like" class="card__like">
             </div>
         </div>
 
