create card lago di braie

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="/pages/index.css">
     <link rel="stylesheet" href="/pages/normalize.css" >
 
-    <title>Jacques Custeau</title>
+    <title>Jacques Cousteau</title>
 </head>
 <body>
     <div class="page">
@@ -18,50 +18,67 @@
     
         <div class="profile">
             <img src="/images/Custeau.png" alt="foto do perfil" class="profile__picture">
-            <p class="profile__name">Jacques Custeau</p>
-            <button class="profile__edit_btn"></button>
-            <p class="profile__text">Explorar</p>
+            <div class="profile__info">
+                <div class="profile__data">
+                    <p class="profile__name">Jacques Cousteau</p>
+                    <a href="" class="link"><img src="/images/Edit-Btn.png" alt="botao de editar" class="profile__edit_btn"><a/>
+                </div>
+                <p class="profile__text">Explorar</p>
+            </div>
+            <a href="" class="edit__button"><img src="/images/Add-Button.png" alt="botao de adicionar" class="add-btn"></a>
         </div>
-
-        <button class="add__btn"></button>
 
         <div class="cards">
             <div class="card">
                 <img src="/images/vale-Yosemite.png" alt="Vale do Yosemite" class="card__image">
-                <p class="card__title">Vale do vale-Yosemite</p>
-                <img src="/images/like.png" alt="botao de like" class="card__like">
+                <div class="card__bottom-bar">
+                    <p class="card__title">Vale do Yosemite</p>
+                    <a href="" class="card__like_btn"><img src="/images/like.png" alt="botao de like" class="card__like"></a>
+                </div>
             </div>
 
             <div class="card">
-                <img src="" alt="" class="card__image">
-                <p class="card__title"></p>
-                <img src="/images/like.png" alt="otao de like" class="card__like">
+                <img src="/images/lago-louise.png" alt="Lago Louise" class="card__image">
+                <div class="card__bottom-bar">
+                    <p class="card__title">Lago Louise</p>
+                    <a href="" class="card__like_btn"><img src="/images/like.png" alt="botao de like" class="card__like"></a>
+                </div>
             </div>
 
             <div class="card">
-                <img src="" alt="" class="card__image">
-                <p class="card__title"></p>
-                <img src="/images/like.png" alt="otao de like" class="card__like">
+                <img src="/images/Montanhas-Care.png" alt="montanha care" class="card__image">
+                <div class="card__bottom-bar">
+                    <p class="card__title">Montanhas Care...</p>
+                    <a href="" class="card__like_btn"><img src="/images/like.png" alt="botao de like" class="card__like"></a>
+                </div>
             </div>
 
             <div class="card">
-                <img src="" alt="" class="card__image">
-                <p class="card__title"></p>
-                <img src="/images/like.png" alt="otao de like" class="card__like">
+                <img src="/images/latemar.png" alt="Latemar" class="card__image">
+                <div class="card__bottom-bar">
+                    <p class="card__title">Latemar</p>
+                    <a href="" class="card__like_btn"><img src="/images/like.png" alt="botao de like" class="card__like"></a>
+                </div>
             </div>
 
             <div class="card">
-                <img src="" alt="" class="card__image">
-                <p class="card__title"></p>
-                <img src="/images/like.png" alt="otao de like" class="card__like">
+                <img src="/images/vanoise-national.png" alt="Vanoise National" class="card__image">
+                <div class="card__bottom-bar">
+                    <p class="card__title">Vanoise National</p>
+                    <a href="" class="card__like_btn"><img src="/images/like.png" alt="botao de like" class="card__like"></a>
+                </div>
             </div>
 
             <div class="card">
-                <img src="" alt="" class="card__image">
-                <p class="card__title"></p>
-                <img src="/images/like.png" alt="otao de like" class="card__like">
-            </div>
+                <img src="/images/lago-di-braies.png" alt="lago di braies" class="card__image">
+                <div class="card__bottom-bar">
+                    <p class="card__title">Lago di Braies</p>
+                    <a href="" class="card__like_btn"><img src="/images/like.png" alt="botao de like" class="card__like"></a>
+                </div>
         </div>
+        <footer class="footer">
+            <p class="footer__text">&copy; 2021 Around the U.S.</p>
+        </footer>
 
     </div>
   <script src="/pages/style.css"></script>  
