Fix Lago di Baries

--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
             </div>
 
             <div class="card">
-                <img src="/images/lago-di-braies.png" alt="lago di braies" class="card__image">
+                <img src="images/lago-di-braies.png" alt="lago di Braies" class="card__image">
                 <div class="card__bottom-bar">
                     <p class="card__title">Lago di Braies</p>
                     <a href="" class="card__like_btn"><img src="/images/like.png" alt="botao de like" class="card__like"></a>
