change: JS link to the correct file

--- a/index.html
+++ b/index.html
@@ -96,6 +96,7 @@
         </footer>
 
     </div>
-  <script src="/pages/style.css"></script>  
+    </div>
+  <script src="/pages/script.js"></script>  
 </body>
 </html>
