change: edit-btn class name to add

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                 </div>
                 <p class="profile__text">Explorar</p>
             </div>
-            <a href="#" class="edit__button"><img src="/images/Add-Button.png" alt="botao de adicionar" class="add-btn"></a>
+            <a href="#" class="add"><img src="/images/Add-Button.png" alt="botao de adicionar" class="add-btn"></a>
             <div class="pop-up">
                 <a href="#" class="form__close"><img src="/images/Close-Icon.png" alt="botao de fechar" class="form__close-btn"><a/>
                 <div class="form">
