fix: closing a tag

--- a/index.html
+++ b/index.html
@@ -21,13 +21,13 @@
             <div class="profile__info">
                 <div class="profile__data">
                     <p class="profile__name">Jacques Cousteau</p>
-                    <a href="" class="profile__edit"><img src="/images/Edit-Btn.png" alt="botao de editar" class="profile__edit_btn"><a/>
+                    <a href="" class="profile__edit"><img src="/images/Edit-Btn.png" alt="botao de editar" class="profile__edit_btn"></a>
                 </div>
                 <p class="profile__text">Explorar</p>
             </div>
             <a href="#" class="add"><img src="/images/Add-Button.png" alt="botao de adicionar" class="add-btn"></a>
             <div class="pop-up">
-                <a href="#" class="form__close"><img src="/images/Close-Icon.png" alt="botao de fechar" class="form__close-btn"><a/>
+                <a href="#" class="form__close"><img src="/images/Close-Icon.png" alt="botao de fechar" class="form__close-btn"></a>
                 <div class="form">
                     <h1 class="form__title">Editar Perfil</h1>
                         <div class="form__elements">
