add: onclick to add btn

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
                             <img src="./images/form-line.png" alt="linha" class="form__line">
                         </div>
                     <div class="form__btn">
-                        <button class="form__save-btn" id="save-btn">Salvar</button>
+                                <button class="form__save-btn" id="save-btn" onclick="savePopup()">Salvar</button>
                     </div>
                 </div>
             </div>
