fix: profile mobile resolution

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
                 <p class="profile__text" id="profileText">Explorar</p>
             </div>
             <a href="#" class="add">
-                <img src="/images/Add-Button.png" alt="botao de adicionar" class="add-btn" onclick="" id="addButton">
+                <img src="/images/addButtonMobile.png" alt="botao de adicionar" class="add-btn" onclick="" id="addButton">
             </a>
         </div>
         <div class="cards">
