change: btn add to button

--- a/index.html
+++ b/index.html
@@ -40,9 +40,7 @@
                 </div>
                 <p class="profile__text" id="profileText">Explorar</p>
             </div>
-            <a href="#" class="add">
-                <img src="/images/addButtonMobile.png" alt="botao de adicionar" class="add-btn" onclick="" id="addButton">
-            </a>
+            <button class="add"></button>
         </div>
         <div class="cards">
             <div class="card">
@@ -57,7 +55,7 @@
                 <img src="/images/lago-louise.png" alt="Lago Louise" class="card__image">
                 <div class="card__bottom-bar">
                     <p class="card__title">Lago Louise</p>
-                    <a href="" class="card__like_btn"><img src="/images/like.png" alt="botao de like" class="card__like"></a>
+                    <a href="" class="card__like_btn"><img src="/images/like.png" alt="botao de like" class="card__like" id="likeImage" onclick="toggleImage()"></a>
                 </div>
             </div>
 
@@ -65,7 +63,7 @@
                 <img src="/images/Montanhas-Care.png" alt="montanha care" class="card__image">
                 <div class="card__bottom-bar">
                     <p class="card__title">Montanhas Care...</p>
-                    <a href="" class="card__like_btn"><img src="/images/like.png" alt="botao de like" class="card__like"></a>
+                    <a href="" class="card__like_btn"><img src="/images/like.png" alt="botao de like" class="card__like" id="likeImage" onclick="toggleImage()"></a>
                 </div>
             </div>
 
@@ -73,7 +71,7 @@
                 <img src="/images/latemar.png" alt="Latemar" class="card__image">
                 <div class="card__bottom-bar">
                     <p class="card__title">Latemar</p>
-                    <a href="" class="card__like_btn"><img src="/images/like.png" alt="botao de like" class="card__like"></a>
+                    <a href="" class="card__like_btn"><img src="/images/like.png" alt="botao de like" class="card__like" id="likeImage" onclick="toggleImage()"></a>
                 </div>
             </div>
 
@@ -81,7 +79,7 @@
                 <img src="/images/vanoise-national.png" alt="Vanoise National" class="card__image">
                 <div class="card__bottom-bar">
                     <p class="card__title">Vanoise National</p>
-                    <a href="" class="card__like_btn"><img src="/images/like.png" alt="botao de like" class="card__like"></a>
+                    <a href="" class="card__like_btn"><img src="/images/like.png" alt="botao de like" class="card__like" id="likeImage" onclick="toggleImage()"></a>
                 </div>
             </div>
 
@@ -89,7 +87,7 @@
                 <img src="images/lago-di-braies.png" alt="lago di Braies" class="card__image">
                 <div class="card__bottom-bar">
                     <p class="card__title">Lago di Braies</p>
-                    <a href="" class="card__like_btn"><img src="/images/like.png" alt="botao de like" class="card__like"></a>
+                    <a href="" class="card__like_btn"><img src="/images/like.png" alt="botao de like" class="card__like" id="likeImage" onclick="toggleImage()"></a>
                 </div>
         </div>
         
