remove: onclick button

--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
                 <img src="/images/lago-louise.png" alt="Lago Louise" class="card__image">
                 <div class="card__bottom-bar">
                     <p class="card__title">Lago Louise</p>
-                    <button class="card__like_btn-off" id="card__like_btn" onclick="likeHeart"></button>
+                    <button class="card__like_btn-off" id="card__like_btn"></button>
                 </div>
             </div>
 
