change: tag and functiom onclick to all like btn

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
                 <img src="/images/vale-Yosemite.png" alt="Vale do Yosemite" class="card__image">
                 <div class="card__bottom-bar">
                     <p class="card__title">Vale do Yosemite</p>
-                    <a href="" class="card__like_btn"><img src="/images/like.png" alt="botao de like" class="card__like" id="likeImage" onclick="toggleImage()"></a>
+                    <button class="card__like_btn-off" onclick="toggleLikeButton(event)" ></button>
                 </div>
             </div>
 
@@ -55,7 +55,7 @@
                 <img src="/images/lago-louise.png" alt="Lago Louise" class="card__image">
                 <div class="card__bottom-bar">
                     <p class="card__title">Lago Louise</p>
-                    <button class="card__like_btn-off" id="card__like_btn"></button>
+                    <button class="card__like_btn-off" onclick="toggleLikeButton(event)" ></button>
                 </div>
             </div>
 
@@ -63,7 +63,7 @@
                 <img src="/images/Montanhas-Care.png" alt="montanha care" class="card__image">
                 <div class="card__bottom-bar">
                     <p class="card__title">Montanhas Care...</p>
-                    <a href="" class="card__like_btn"><img src="/images/like.png" alt="botao de like" class="card__like" id="likeImage" onclick="toggleImage()"></a>
+                    <button class="card__like_btn-off" onclick="toggleLikeButton(event)" ></button>
                 </div>
             </div>
 
@@ -71,7 +71,7 @@
                 <img src="/images/latemar.png" alt="Latemar" class="card__image">
                 <div class="card__bottom-bar">
                     <p class="card__title">Latemar</p>
-                    <a href="" class="card__like_btn"><img src="/images/like.png" alt="botao de like" class="card__like" id="likeImage" onclick="toggleImage()"></a>
+                    <button class="card__like_btn-off" onclick="toggleLikeButton(event)" ></button>
                 </div>
             </div>
 
@@ -79,7 +79,7 @@
                 <img src="/images/vanoise-national.png" alt="Vanoise National" class="card__image">
                 <div class="card__bottom-bar">
                     <p class="card__title">Vanoise National</p>
-                    <a href="" class="card__like_btn"><img src="/images/like.png" alt="botao de like" class="card__like" id="likeImage" onclick="toggleImage()"></a>
+                    <button class="card__like_btn-off" onclick="toggleLikeButton(event)" ></button>
                 </div>
             </div>
 
@@ -87,7 +87,7 @@
                 <img src="images/lago-di-braies.png" alt="lago di Braies" class="card__image">
                 <div class="card__bottom-bar">
                     <p class="card__title">Lago di Braies</p>
-                    <a href="" class="card__like_btn"><img src="/images/like.png" alt="botao de like" class="card__like" id="likeImage" onclick="toggleImage()"></a>
+                    <button class="card__like_btn-off" onclick="toggleLikeButton(event)" ></button>
                 </div>
         </div>
         
