change path to all files

--- a/index.html
+++ b/index.html
@@ -4,20 +4,20 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="/pages/index.css" />
+    <link rel="stylesheet" href="./pages/index.css" />
 
     <title>Jacques Cousteau</title>
   </head>
   <body>
     <div class="page">
       <div class="header">
-        <img src="/images/logo.png" alt="logo" class="header__logo" />
-        <img src="/images/Line.png" alt="linha" class="header__line" />
+        <img src="./images/logo.png" alt="logo" class="header__logo" />
+        <img src="./images/Line.png" alt="linha" class="header__line" />
       </div>
 
       <div class="profile">
         <img
-          src="/images/Custeau.png"
+          src="./images/Custeau.png"
           alt="foto do perfil"
           class="profile__picture"
         />
@@ -26,7 +26,7 @@
             <p class="profile__name" id="profileName">Jacques Cousteau</p>
             <a href="#" class="profile__edit"
               ><img
-                src="/images/Edit-Btn.png"
+                src="./images/Edit-Btn.png"
                 alt="botao de editar"
                 class="profile__edit_btn"
                 onclick="openPopup()"
@@ -84,7 +84,7 @@
       <div class="cards">
         <div class="card">
           <img
-            src="/images/vale-Yosemite.png"
+            src="./images/vale-Yosemite.png"
             alt="Vale do Yosemite"
             class="card__image"
           />
@@ -99,7 +99,7 @@
 
         <div class="card">
           <img
-            src="/images/lago-louise.png"
+            src="./images/lago-louise.png"
             alt="Lago Louise"
             class="card__image"
           />
@@ -114,7 +114,7 @@
 
         <div class="card">
           <img
-            src="/images/Montanhas-Care.png"
+            src="./images/Montanhas-Care.png"
             alt="montanha care"
             class="card__image"
           />
@@ -128,7 +128,7 @@
         </div>
 
         <div class="card">
-          <img src="/images/latemar.png" alt="Latemar" class="card__image" />
+          <img src="./images/latemar.png" alt="Latemar" class="card__image" />
           <div class="card__bottom-bar">
             <p class="card__title">Latemar</p>
             <button
@@ -140,7 +140,7 @@
 
         <div class="card">
           <img
-            src="/images/vanoise-national.png"
+            src="./images/vanoise-national.png"
             alt="Vanoise National"
             class="card__image"
           />
@@ -155,7 +155,7 @@
 
         <div class="card">
           <img
-            src="images/lago-di-braies.png"
+            src="./images/lago-di-braies.png"
             alt="lago di Braies"
             class="card__image"
           />
@@ -172,6 +172,6 @@
         <p class="footer__text">&copy; 2021 Around the U.S.</p>
       </footer>
     </div>
-    <script src="/pages/script.js"></script>
+    <script src="./pages/script.js"></script>
   </body>
 </html>
