--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
             <button class="edit-btn" id="editButton"></button>
             <div class="popup" id="popup">
               <button class="close-btn" id="closeBtn"></button>
-              <div class="form">
+              <form class="form">
                 <h1 class="form__title">Editar Perfil</h1>
                 <div class="form__elements">
                   <input
@@ -47,7 +47,7 @@
                 <button class="save-btn" id="save-btn" type="submit">
                   Salvar
                 </button>
-              </div>
+              </form>
             </div>
           </div>
           <p class="profile__text" id="profileText">Explorar</p>
@@ -124,7 +124,7 @@
         </div>
       </div>
       <footer class="footer">
-        <p class="footer__text">&copy; 2021 Around the U.S.</p>
+        <p class="footer__text">&copy; 2023 Around the U.S.</p>
       </footer>
     </div>
     <script src="./pages/script.js"></script>
