DELETE: HMTL cards

--- a/index.html
+++ b/index.html
@@ -52,10 +52,10 @@
           </div>
           <p class="profile__text" id="profileText">Explorar</p>
         </div>
-        <button class="add"></button>
+        <button class="add" id="addButton"></button>
       </div>
       <div class="cards">
-        <div class="card">
+        <!-- <div class="card">
           <img
             src="./images/vale-Yosemite.png"
             alt="Vale do Yosemite"
@@ -121,7 +121,7 @@
             <p class="card__title">Lago di Braies</p>
             <button class="heart-off"></button>
           </div>
-        </div>
+        </div> -->
       </div>
       <footer class="footer">
         <p class="footer__text">&copy; 2023 Around the U.S.</p>
