--- a/index.html
+++ b/index.html
@@ -54,75 +54,7 @@
         </div>
         <button class="add" id="addButton"></button>
       </div>
-      <div class="cards">
-        <!-- <div class="card">
-          <img
-            src="./images/vale-Yosemite.png"
-            alt="Vale do Yosemite"
-            class="card__image"
-          />
-          <div class="card__bottom-bar">
-            <p class="card__title">Vale do Yosemite</p>
-            <button class="heart-off"></button>
-          </div>
-        </div>
-
-        <div class="card">
-          <img
-            src="./images/lago-louise.png"
-            alt="Lago Louise"
-            class="card__image"
-          />
-          <div class="card__bottom-bar">
-            <p class="card__title">Lago Louise</p>
-            <button class="heart-off"></button>
-          </div>
-        </div>
-
-        <div class="card">
-          <img
-            src="./images/Montanhas-Care.png"
-            alt="montanha care"
-            class="card__image"
-          />
-          <div class="card__bottom-bar">
-            <p class="card__title">Montanhas Care...</p>
-            <button class="heart-off"></button>
-          </div>
-        </div>
-
-        <div class="card">
-          <img src="./images/latemar.png" alt="Latemar" class="card__image" />
-          <div class="card__bottom-bar">
-            <p class="card__title">Latemar</p>
-            <button class="heart-off"></button>
-          </div>
-        </div>
-
-        <div class="card">
-          <img
-            src="./images/vanoise-national.png"
-            alt="Vanoise National"
-            class="card__image"
-          />
-          <div class="card__bottom-bar">
-            <p class="card__title">Vanoise National</p>
-            <button class="heart-off"></button>
-          </div>
-        </div>
-
-        <div class="card">
-          <img
-            src="./images/lago-di-braies.png"
-            alt="lago di Braies"
-            class="card__image"
-          />
-          <div class="card__bottom-bar">
-            <p class="card__title">Lago di Braies</p>
-            <button class="heart-off"></button>
-          </div>
-        </div> -->
-      </div>
+      <div class="cards"></div>
       <footer class="footer">
         <p class="footer__text">&copy; 2023 Around the U.S.</p>
       </footer>
