FEAT: Add-popup to HTML

--- a/index.html
+++ b/index.html
@@ -53,6 +53,22 @@
           <p class="profile__text" id="profileText">Explorar</p>
         </div>
         <button class="add"></button>
+        <div class="popup" id="add-popup">
+          <button class="close-btn" id="closeBtn"></button>
+          <form class="form">
+            <h1 class="form__title">New Place</h1>
+            <div class="form__elements">
+              <input type="text" class="form__input" placeholder="Title" />
+              <input
+                type="text"
+                class="form__link-input"
+                placeholder="Image URL"
+              />
+            </div>
+
+            <button class="save-btn" id="save-btn" type="submit">Salvar</button>
+          </form>
+        </div>
       </div>
       <div class="cards">
         <div class="card">
