add: add-popup HTML ids

--- a/index.html
+++ b/index.html
@@ -58,15 +58,23 @@
           <form class="form">
             <h1 class="form__title">New Place</h1>
             <div class="form__elements">
-              <input type="text" class="form__input" placeholder="Title" />
+              <input
+                type="text"
+                class="form__input"
+                id="userPlaceTitle"
+                placeholder="Title"
+              />
               <input
                 type="text"
                 class="form__link-input"
                 placeholder="Image URL"
+                id="userPixUrl"
               />
             </div>
 
-            <button class="save-btn" id="save-btn" type="submit">Salvar</button>
+            <button class="save-btn" id="addFormSaveBtn" type="submit">
+              Salvar
+            </button>
           </form>
         </div>
       </div>
