fix: change class and id for addpopup

--- a/index.html
+++ b/index.html
@@ -53,8 +53,8 @@
           <p class="profile__text" id="profileText">Explorar</p>
         </div>
         <button class="add"></button>
-        <div class="popup" id="add-popup">
-          <button class="close-btn" id="closeBtn"></button>
+        <div class="add-popup" id="add-popup">
+          <button class="close-btn" id="closeAddBtn"></button>
           <form class="form">
             <h1 class="form__title">New Place</h1>
             <div class="form__elements">
