--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
                 </div>
 
                 <button class="save-btn" id="save-btn" type="submit">
-                  Salvar
+                  Criar
                 </button>
               </form>
             </div>
