Fix: change HTML texts from EN to PT

--- a/index.html
+++ b/index.html
@@ -56,29 +56,30 @@
         <div class="add-popup" id="add-popup">
           <button class="close-btn" id="closeAddBtn"></button>
           <form class="form">
-            <h1 class="form__title">New Place</h1>
+            <h1 class="form__title">Novo Local</h1>
             <div class="form__elements">
               <input
                 type="text"
                 class="form__input"
                 id="userPlaceTitle"
-                placeholder="Title"
+                placeholder="Titulo"
               />
               <input
                 type="text"
                 class="form__link-input"
-                placeholder="Image URL"
+                placeholder="Imagem URL"
                 id="userPixUrl"
               />
             </div>
 
             <button class="save-btn" id="addFormSaveBtn" type="submit">
-              Salvar
+              Criar
             </button>
           </form>
         </div>
       </div>
       <div class="cards"></div>
+      <div class="image-popup"></div>
       <footer class="footer">
         <p class="footer__text">&copy; 2023 Around the U.S.</p>
       </footer>
