add: imaga-popup to HTML

--- a/index.html
+++ b/index.html
@@ -78,8 +78,8 @@
           </form>
         </div>
       </div>
+      <div class="cards-popup"></div>
       <div class="cards"></div>
-      <div class="image-popup"></div>
       <footer class="footer">
         <p class="footer__text">&copy; 2023 Around the U.S.</p>
       </footer>
