add: HTML template for cards

--- a/index.html
+++ b/index.html
@@ -78,8 +78,25 @@
           </form>
         </div>
       </div>
-      <div class="cards-popup"></div>
-      <div class="cards"></div>
+      <section class="images">
+        <template class="cards-popup">
+          <p class="">
+            <img src="" alt="" class="" /><button class=""></button>
+          </p>
+        </template>
+        <ul class="cards">
+          <template>
+            <li class="card">
+              <button class="trash-btn"></button>
+              <img class="card__image" src="" alt="" />
+              <div class="card__bottom-bar">
+                <p class="card__title"></p>
+                <button class="heart-off"></button>
+              </div>
+            </li>
+          </template>
+        </ul>
+      </section>
       <footer class="footer">
         <p class="footer__text">&copy; 2023 Around the U.S.</p>
       </footer>
