deleted: wrong classes for cards popup

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
     <title>Jacques Cousteau</title>
   </head>
-  <body class="body">
+  <body>
     <div class="page">
       <div class="header">
         <img src="./images/logo.png" alt="logo" class="header__logo" />
