Change: style in cards popup

--- a/index.html
+++ b/index.html
@@ -80,9 +80,11 @@
       </div>
       <section class="images">
         <div class="cards-popup">
-          <button class="cards-popup__btn"></button>
-          <img src="" alt="" class="cards-popup__img" />
-          <p class="cards-popup__title"></p>
+          <div class="container">
+            <button class="cards-popup__btn"></button>
+            <img src="" alt="" class="cards-popup__img" />
+            <p class="cards-popup__title"></p>
+          </div>
         </div>
         <ul class="cards">
           <template id="card-template">
