Change: Placeholder to value

--- a/index.html
+++ b/index.html
@@ -33,13 +33,13 @@
                   <input
                     type="text"
                     class="form__username"
-                    placeholder="Jacques Cousteau"
+                    value="Jacques Cousteau"
                     id="username"
                   />
                   <input
                     type="text"
                     class="form__info"
-                    placeholder="Explorar"
+                    value="Explorar"
                     id="usertext"
                   />
                 </div>
@@ -62,12 +62,12 @@
                 type="text"
                 class="form__input"
                 id="userPlaceTitle"
-                placeholder="Titulo"
+                value="Titulo"
               />
               <input
                 type="text"
                 class="form__link-input"
-                placeholder="Imagem URL"
+                value="Imagem URL"
                 id="userPixUrl"
               />
             </div>
